GNOME Bugzilla – Bug 678079
[PATCH] memory leaks
Last modified: 2012-06-15 05:05:50 UTC
All patches are actual for master and 3.4
Created attachment 216390 [details] [review] ShellContactSystem: fix GeeMapIterator leak
Created attachment 216391 [details] [review] shell-util: fix GFile leak
Created attachment 216392 [details] [review] ShellContactSystem: fix GSList leak
Created attachment 216393 [details] [review] ShellContactSystem: fix GSList of utf8 leak
Created attachment 216394 [details] [review] st-texture-cache: fix GtkIconInfo leak
Review of attachment 216391 [details] [review]: Yes
Review of attachment 216392 [details] [review]: Yes
Review of attachment 216393 [details] [review]: Yes
Review of attachment 216394 [details] [review]: Yes
Review of attachment 216390 [details] [review]: This seems good although I'm not 100% sure on the vala semantics of the code where this instance comes from. Anyone?
Review of attachment 216390 [details] [review]: Yes, this is correct.
Pavel, do you need somebody to push these patches for you?
(In reply to comment #12) > Pavel, do you need somebody to push these patches for you? Yes. Somebody please push.
Attachment 216390 [details] pushed as 1cf2bb6 - ShellContactSystem: fix GeeMapIterator leak Attachment 216391 [details] pushed as 447246d - shell-util: fix GFile leak Attachment 216392 [details] pushed as 2b34978 - ShellContactSystem: fix GSList leak Attachment 216393 [details] pushed as 201dc05 - ShellContactSystem: fix GSList of utf8 leak Attachment 216394 [details] pushed as 7524210 - st-texture-cache: fix GtkIconInfo leak Thanks for the patches, Pavel!