ShellContactSystem: fix GeeMapIterator leak

https://bugzilla.gnome.org/show_bug.cgi?id=678079